--- a/doc/man/man3/bug.3
+++ b/doc/man/man3/bug.3
@@ -5,6 +5,8 @@
 bug \- Bug List 
 
 .IP "\fBGlobal \fBpartition\fP ()\fP" 1c
-Same issue with mkswap and swapon\&. Syncing and a bit of sleep fixed these issues\&. 
+Same issue with mkswap and swapon\&. Cleaning VBox config/settings, syncing and a bit of sleep fixed these issues for the \fInet-setup\fP method\&. 
+.PP
+However the \fIdhcpcd\fP method is consistently broken, which currently blocks headless vmtypes\&. 
 .PP
 
