--- a/doc/man/man3/mkgentoo.sh.3
+++ b/doc/man/man3/mkgentoo.sh.3
@@ -103,7 +103,7 @@ Upgrade it with virtualbox guest additions\&. "
 .ti -1c
 .RI "\fBgenerate_Gentoo\fP ()"
 .br
-.RI "Launch routines: fetch install ISO, starge3 archive, create VM\&. "
+.RI "Launch routines: fetch install IO, starge3 archive, create VM\&. "
 .ti -1c
 .RI "\fBmain\fP ()"
 .br
@@ -228,7 +228,7 @@ Definition in file \fBmkgentoo\&.sh\fP\&.
 .SS "Exported String PATH = ${PATH}:${VBPATH}"
 
 .PP
-Definition at line 530 of file mkgentoo\&.sh\&.
+Definition at line 565 of file mkgentoo\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for gentoo-creator from the source code\&.
