--- a/doc/latex/group__create_installer.tex
+++ b/doc/latex/group__create_installer.tex
@@ -51,7 +51,7 @@ Upgrade it with virtualbox guest additions. \end{DoxyCompactList}\item
 \mbox{\hyperlink{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}{cleanup}} ()
 \begin{DoxyCompactList}\small\item\em Clean up all temporary files and directpries (except for Virtual\+Box build) \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}{generate\+\_\+\+Gentoo}} ()
-\begin{DoxyCompactList}\small\item\em Launch routines\+: fetch install I\+SO, starge3 archive, create VM. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Launch routines\+: fetch install IO, starge3 archive, create VM. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}{main}} ()
 \begin{DoxyCompactList}\small\item\em Main function launching routines. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga532879314181eb08a603971d9ac2b2f3}{create\+\_\+install\+\_\+usb\+\_\+device}} ()
@@ -89,7 +89,7 @@ This is only needed to reduce disk space requirements and avoid a temporary R\+A
 \end{DoxyNote}
 
 
-Definition at line 644 of file mkgentoo.\+sh.
+Definition at line 682 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}\label{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!cleanup@{cleanup}}
@@ -103,7 +103,7 @@ Clean up all temporary files and directpries (except for Virtual\+Box build)
 
 
 
-Definition at line 900 of file mkgentoo.\+sh.
+Definition at line 934 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga318b91c23a0df7a900d71338896b124e}\label{group__create_installer_ga318b91c23a0df7a900d71338896b124e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clone\_vm\_to\_device@{clone\_vm\_to\_device}}
@@ -127,7 +127,7 @@ Either build it beforehand or specify on commandline\+:
 \end{DoxyNote}
 
 
-Definition at line 706 of file mkgentoo.\+sh.
+Definition at line 744 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}\label{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clone\_vm\_to\_raw@{clone\_vm\_to\_raw}}
@@ -145,7 +145,7 @@ Use.
 \end{DoxyCode}
  to clone V\+DI to R\+AW file before bare-\/metal copy to device. 
 
-Definition at line 734 of file mkgentoo.\+sh.
+Definition at line 771 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaf8725880181e1189e31629b07163aaa4}\label{group__create_installer_gaf8725880181e1189e31629b07163aaa4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clonezilla\_device\_to\_image@{clonezilla\_device\_to\_image}}
@@ -164,7 +164,7 @@ Image is created under I\+S\+O\+F\+I\+L\+E\+S/home/partimag/image under V\+M\+P\
 \end{DoxyRetVals}
 
 
-Definition at line 770 of file mkgentoo.\+sh.
+Definition at line 807 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}\label{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!clonezilla\_to\_iso@{clonezilla\_to\_iso}}
@@ -188,7 +188,7 @@ I\+SO can be burned to D\+VD or used to create a bootable U\+SB stick using dd o
 \end{DoxyNote}
 
 
-Definition at line 565 of file mkgentoo.\+sh.
+Definition at line 603 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga532879314181eb08a603971d9ac2b2f3}\label{group__create_installer_ga532879314181eb08a603971d9ac2b2f3}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_install\_usb\_device@{create\_install\_usb\_device}}
@@ -229,7 +229,7 @@ the {\bfseries{sharedfolder}} command may fail vith older version of Virtual\+Bo
 \end{DoxyWarning}
 
 
-Definition at line 669 of file mkgentoo.\+sh.
+Definition at line 707 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gafcb910ff0a49712375eabe0631b4dcdd}\label{group__create_installer_gafcb910ff0a49712375eabe0631b4dcdd}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_usb\_system@{create\_usb\_system}}
@@ -250,7 +250,7 @@ Two options are available. If vbox-\/img (patched) is functional after building 
 \end{DoxyRetVals}
 
 
-Definition at line 864 of file mkgentoo.\+sh.
+Definition at line 901 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga629c1830d8dbae377193387edd199399}\label{group__create_installer_ga629c1830d8dbae377193387edd199399}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!create\_vm@{create\_vm}}
@@ -272,7 +272,7 @@ VM may be visible (vmtype=gui) or without G\+UI (vmtype=headless, currently to b
 \item[\mbox{\hyperlink{todo__todo000001}{Todo}}]Find a way to only compact on success and never on failure of VM. \end{DoxyRefDesc}
 
 
-Definition at line 529 of file mkgentoo.\+sh.
+Definition at line 564 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}\label{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!dd\_to\_usb@{dd\_to\_usb}}
@@ -289,7 +289,7 @@ Used only if vbox-\/img (patched version) has not been built.
 \end{DoxyNote}
 
 
-Definition at line 743 of file mkgentoo.\+sh.
+Definition at line 780 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga8e416fab9a9e0ffd0b87927d0ec94a25}\label{group__create_installer_ga8e416fab9a9e0ffd0b87927d0ec94a25}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!delete\_vm@{delete\_vm}}
@@ -317,7 +317,7 @@ Powers off, possibly with emergency stop, the VM names as first argument.
 \end{DoxyItemize}
 
 
-Definition at line 493 of file mkgentoo.\+sh.
+Definition at line 509 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gae1918429f97793a7d5ff449988d57ebd}\label{group__create_installer_gae1918429f97793a7d5ff449988d57ebd}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!fetch\_clonezilla\_iso@{fetch\_clonezilla\_iso}}
@@ -357,7 +357,7 @@ Caches it as \$\{I\+SO\}
 \end{DoxyRetVals}
 
 
-Definition at line 269 of file mkgentoo.\+sh.
+Definition at line 268 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaeea237ee4e4e714889c00f67211ddb2b}\label{group__create_installer_gaeea237ee4e4e714889c00f67211ddb2b}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!fetch\_stage3@{fetch\_stage3}}
@@ -376,7 +376,7 @@ Caches it as \$\{S\+T\+A\+G\+E3\}
 \end{DoxyRetVals}
 
 
-Definition at line 324 of file mkgentoo.\+sh.
+Definition at line 325 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}\label{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!generate\_Gentoo@{generate\_Gentoo}}
@@ -386,11 +386,11 @@ Definition at line 324 of file mkgentoo.\+sh.
 
 
 
-Launch routines\+: fetch install I\+SO, starge3 archive, create VM. 
+Launch routines\+: fetch install IO, starge3 archive, create VM. 
 
 
 
-Definition at line 924 of file mkgentoo.\+sh.
+Definition at line 958 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga91482c4db18186b33acbaf1528a50ddc}\label{group__create_installer_ga91482c4db18186b33acbaf1528a50ddc}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!help@{help}}
@@ -404,7 +404,7 @@ Print usage to stdout.
 
 
 
-Definition at line 259 of file mkgentoo.\+sh.
+Definition at line 258 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}\label{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!help\_md@{help\_md}}
@@ -432,7 +432,7 @@ Main function launching routines.
 
 
 
-Definition at line 962 of file mkgentoo.\+sh.
+Definition at line 984 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac524b24b0add02df542887f9b251eb42}\label{group__create_installer_gac524b24b0add02df542887f9b251eb42}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!make\_boot\_from\_livecd@{make\_boot\_from\_livecd}}
@@ -458,7 +458,7 @@ Will be run in the \$\{VM\} virtual machine
 \end{DoxyRetVals}
 
 
-Definition at line 378 of file mkgentoo.\+sh.
+Definition at line 379 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gac1f727409fd593a27f5e4df3270aab31}\label{group__create_installer_gac1f727409fd593a27f5e4df3270aab31}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!process\_clonezilla\_iso@{process\_clonezilla\_iso}}
@@ -477,7 +477,7 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 \end{DoxyNote}
 
 
-Definition at line 596 of file mkgentoo.\+sh.
+Definition at line 634 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_gaff896e7d0252924e2224ab0cde968609}\label{group__create_installer_gaff896e7d0252924e2224ab0cde968609}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_cli@{test\_cli}}
@@ -535,7 +535,7 @@ Check Virtual\+Box version and prepare commandline analysis.
 \end{DoxyRetVals}
 
 
-Definition at line 142 of file mkgentoo.\+sh.
+Definition at line 143 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga321673d67e2987c793505f7f323894a9}\label{group__create_installer_ga321673d67e2987c793505f7f323894a9}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!test\_vm\_running@{test\_vm\_running}}
@@ -559,7 +559,7 @@ Checks if VM as first named argument exists and is running.
 \end{DoxyRetVals}
 
 
-Definition at line 476 of file mkgentoo.\+sh.
+Definition at line 477 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}\label{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!vbox\_img\_works@{vbox\_img\_works}}
@@ -580,7 +580,7 @@ Test if {\bfseries{vbox-\/img}} is functional.
 \end{DoxyRetVals}
 
 
-Definition at line 839 of file mkgentoo.\+sh.
+Definition at line 876 of file mkgentoo.\+sh.
 
 
 
@@ -615,7 +615,7 @@ Number of switches (true length of array divided by 3)
 
 
 
-Definition at line 129 of file mkgentoo.\+sh.
+Definition at line 130 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{group__create_installer_ga9d96a3318548b34c97ef6e22b23d0b8e}\label{group__create_installer_ga9d96a3318548b34c97ef6e22b23d0b8e}} 
 \index{Create Gentoo linux image and installer.@{Create Gentoo linux image and installer.}!CLI@{CLI}}
@@ -643,5 +643,5 @@ Name of downloaded clonezilla I\+SO file.
 
 
 
-Definition at line 135 of file mkgentoo.\+sh.
+Definition at line 136 of file mkgentoo.\+sh.
 
