--- a/doc/latex/group__mk_file_system.tex
+++ b/doc/latex/group__mk_file_system.tex
@@ -45,7 +45,7 @@
 \end{DoxyItemize}
 
 
-Definition at line 41 of file mkvm\+\_\+chroot.\+sh.
+Definition at line 43 of file mkvm\+\_\+chroot.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_ga0a168c36e3839b754f641e6639ff2472}\label{group__mk_file_system_ga0a168c36e3839b754f641e6639ff2472}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!build\_kernel@{build\_kernel}}
@@ -62,7 +62,7 @@ Definition at line 41 of file mkvm\+\_\+chroot.\+sh.
 \end{DoxyItemize}
 
 
-Definition at line 162 of file mkvm\+\_\+chroot.\+sh.
+Definition at line 164 of file mkvm\+\_\+chroot.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_ga9caaa1f5ea6177e55f13ebe7dec2bd60}\label{group__mk_file_system_ga9caaa1f5ea6177e55f13ebe7dec2bd60}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!finalize@{finalize}}
@@ -78,7 +78,7 @@ Unmount chrooted system, restore user rights and shutdown VM.
 \item Cleanup {\bfseries{}}.bashrc \item Cleanup other files except for logs if debug mode is on. \item Write zeros as much as possible to prepare for compacting. \end{DoxyItemize}
 
 
-Definition at line 240 of file mkvm.\+sh.
+Definition at line 247 of file mkvm.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_ga30f3fc39fcff53af9710fea740f38109}\label{group__mk_file_system_ga30f3fc39fcff53af9710fea740f38109}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!global\_config@{global\_config}}
@@ -93,7 +93,7 @@ Fix {\bfseries{sddm}} startup keyboard issue using {\ttfamily  setxkbmap}
 \end{DoxyItemize}
 
 
-Definition at line 284 of file mkvm\+\_\+chroot.\+sh.
+Definition at line 286 of file mkvm\+\_\+chroot.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_gab693423f511d21225dbc60b2782190c3}\label{group__mk_file_system_gab693423f511d21225dbc60b2782190c3}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!install\_software@{install\_software}}
@@ -112,7 +112,7 @@ Definition at line 284 of file mkvm\+\_\+chroot.\+sh.
 \end{DoxyItemize}
 
 
-Definition at line 209 of file mkvm\+\_\+chroot.\+sh.
+Definition at line 211 of file mkvm\+\_\+chroot.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_ga57eb97a585b6daafed0d93e57b96cca3}\label{group__mk_file_system_ga57eb97a585b6daafed0d93e57b96cca3}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!install\_stage3@{install\_stage3}}
@@ -124,7 +124,7 @@ Definition at line 209 of file mkvm\+\_\+chroot.\+sh.
 \item Copy stage3 archive, ebuild list, kernel config and \mbox{\hyperlink{mkvm__chroot_8sh}{mkvm\+\_\+chroot.\+sh}} to /mnt/gentoo \item Extract it, fix basic make.\+conf options \item Install repos.\+conf from live\+CD (networking parameters) \item Mount live\+CD proc/sys/dev files into new filesystem \item On failure, print error codes into file {\bfseries{partition}} \item On success, create empty file {\bfseries{partition}} \item {\ttfamily  chroot } into new system \end{DoxyItemize}
 
 
-Definition at line 145 of file mkvm.\+sh.
+Definition at line 152 of file mkvm.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_gaa9952b2711fe0413d7a0bc6639c7f5a5}\label{group__mk_file_system_gaa9952b2711fe0413d7a0bc6639c7f5a5}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!partition@{partition}}
@@ -142,13 +142,15 @@ Create file {\bfseries{partition}}. ~\newline
 The VM needs time to recognize /dev/sda in some cases, for unclear reasons. This may be a kernel issue or a Virtual\+Box issue. 
 \end{DoxyWarning}
 \begin{DoxyRefDesc}{Bug}
-\item[\mbox{\hyperlink{bug__bug000001}{Bug}}]Same issue with mkswap and swapon. Syncing and a bit of sleep fixed these issues. \end{DoxyRefDesc}
+\item[\mbox{\hyperlink{bug__bug000001}{Bug}}]Same issue with mkswap and swapon. Cleaning V\+Box config/settings, syncing and a bit of sleep fixed these issues for the {\itshape net-\/setup} method. 
+
+However the {\itshape dhcpcd} method is consistently broken, which currently blocks headless vmtypes. \end{DoxyRefDesc}
 \begin{DoxyNote}{Note}
 It might be necessary with older machines to increase the amount of sleep. 
 \end{DoxyNote}
 
 
-Definition at line 62 of file mkvm.\+sh.
+Definition at line 68 of file mkvm.\+sh.
 
 \mbox{\Hypertarget{group__mk_file_system_ga4315b3877c965059c7db8593870066ba}\label{group__mk_file_system_ga4315b3877c965059c7db8593870066ba}} 
 \index{Create Gentoo linux filesystem on VM disk and emerge software.@{Create Gentoo linux filesystem on VM disk and emerge software.}!setup\_network@{setup\_network}}
@@ -167,5 +169,5 @@ Create file {\bfseries{setup\+\_\+network}} on success for debugging purposes
 \end{DoxyRetVals}
 
 
-Definition at line 27 of file mkvm.\+sh.
+Definition at line 29 of file mkvm.\+sh.
 
