--- a/doc/man/man3/mkFileSystem.3
+++ b/doc/man/man3/mkFileSystem.3
@@ -1,4 +1,4 @@
-.TH "mkFileSystem" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
+.TH "mkFileSystem" 3 "Thu Oct 1 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -114,7 +114,7 @@ Write zeros as much as possible to prepare for compacting\&.
 .PP
 
 .PP
-Definition at line 247 of file mkvm\&.sh\&.
+Definition at line 266 of file mkvm\&.sh\&.
 .SS "global_config ()"
 
 .PD 0
@@ -191,7 +191,7 @@ On success, create empty file \fBpartition\fP
 .PP
 
 .PP
-Definition at line 152 of file mkvm\&.sh\&.
+Definition at line 171 of file mkvm\&.sh\&.
 .SS "partition ()"
 
 .PP
@@ -210,7 +210,7 @@ The VM needs time to recognize /dev/sda in some cases, for unclear reasons\&. Th
 .RS 4
 Same issue with mkswap and swapon\&. Cleaning VBox config/settings, syncing and a bit of sleep fixed these issues for the \fInet-setup\fP method\&. 
 .PP
-However the \fIdhcpcd\fP method is consistently broken, which currently blocks headless vmtypes\&. 
+However the \fIdhcpcd\fP method is consistently broken, which currently blocks headless vmtypes\&. Tests show that this is linked to a requested user keyboard or mouse input by the Gentoo minimal install CD\&. This cannot be simulated owing to the lack of /dev/uinput\&. The reason why user input is requested has not been found\&. Without it, /dev/sda2 and/or sda4 are mistakenly identified as being mounted and/or busy, while this cannot be the case\&. With even a single keystroke for a \fCread\fPcommand, all falls back into place\&. This is why using the net-setup script, which forces user input, circumvents the issue\&. This may be caused by an aging kernel and/or incompatibilities with virtualization\&. Using a CloneZilla CD as a replacement solved the issue completely yet would need a redraft of much of the code\&. It might be better to use a beefed-up Gentoo install CD\&. 
 .RE
 .PP
 \fBNote\fP
@@ -220,7 +220,7 @@ It might be necessary with older machines to increase the amount of sleep\&.
 .PP
 
 .PP
-Definition at line 68 of file mkvm\&.sh\&.
+Definition at line 81 of file mkvm\&.sh\&.
 .SS "setup_network ()"
 
 .PP
